# morph-v1-esp32-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.dev  sdkconfig.esp32dev  sdkconfig.prod  start_dev.sh
main/: ADC.cpp  AbstractButton.cpp  AdcCalibrator.cpp  BLE.cpp  BLEEventsHandler.hpp  CMakeLists.txt  DebugMenu.cpp  Dimmer.cpp  DisplayManager.cpp  ESP32.cpp  FontTypes.hpp  Fonts.cpp  Fonts.hpp  GAIA.cpp  GUI.cpp  GpioButton.cpp  HttpWebserver.cpp  ITask.cpp  LVGL.cpp  LanguagePack.hpp  LanguagePackCollection.cpp  LanguagePackCollection.hpp  Languages.cpp  MessageDispatcher.cpp  MorphDevice.cpp  NVS.cpp  Settings.cpp  SettingsSaver.cpp  SmartCaseDarkTheme.cpp  TitlesTypes.hpp  TouchButton.cpp  Uart.cpp  icon_font_mic.c  main.cpp
main/FactoryReset/: FactoryResetEvents.hpp  FactoryResetFSM.cpp  FactoryResetFSM.hpp  FactoryResetSignals.hpp  FactoryResetState.hpp  FinalState.hpp  PutEarbudsInCaseState.hpp  TakeEarbudsFromCaseState.hpp  WaitForConnectionState.hpp  WaitForUserPressNextState.hpp
main/Utils/: DoubleInt16ToInt32.cpp  GpioUtils.cpp  HttpUtils.cpp  StringUtils.cpp  ThreadSafeDbg.cpp  TimeUtils.cpp  WifiUtils.cpp  stringUtils.cpp  threadSafeDbg.cpp
main/Variants/src/: JsonBuffer.hpp  JsonBufferBase.hpp  JsonPair.hpp  (+5 more)
main/fonts/: font_dejavu_14.c  font_dejavu_16.c  font_dejavu_18.c  font_dejavu_22.c  font_dejavu_24.c  font_dejavu_26.c  font_sazanami_14.c  font_sazanami_18.c  font_sazanami_22.c  font_sazanami_24.c  font_sazanami_26.c
main/images/: cassete_img_139_90.c  cat_img_135_90.c  morph_img_black.c  scull_img_90_90.c
main/include/: ADC.hpp  AbstractFSM.hpp  AbstractState.hpp  AdcCalibrator.hpp  BLE.hpp  BatteryMeter.hpp  DebugMenu.hpp  Dimmer.hpp  DisplayManager.hpp  ESP32.hpp  EnableIf.hpp  FSMTransition.hpp  FloatTraits.hpp  GAIA.hpp  GUI.hpp  GpioButton.hpp  HttpWebserver.hpp  IButton.hpp  ITask.hpp  InterruptLocker.hpp  IsChar.hpp  IsConst.hpp  LVGL.hpp  MessageConsumer.hpp  MessageDispatcher.hpp  MessageProducer.hpp  MorphDevice.hpp  NVS.hpp  PairedDevice.hpp  ResourceAccessor.hpp  ScreenlockImageType.hpp  Settings.hpp  SettingsSaveProfile.hpp  SettingsSaver.hpp  SmartCase.hpp  SmartCaseDarkTheme.hpp  TouchButton.hpp  TypeTraits.hpp  Uart.hpp  anc_modes.hpp  (+9 more)
main/webserver/: index_ota.html  ota.html  root.html  save.html  script.js  settings.html  stylesheet.css
(+275 files in other folders)
