file(GLOB_RECURSE SOURCES defines.h webserver/* *.cpp *.cfonts/* images/*)
set(srcs ${SOURCES})

idf_component_register(INCLUDE_DIRS ${includedirs} SRCS ${srcs})
#target_add_binary_data(${COMPONENT_TARGET} "webserver/root.html" TEXT)
#target_add_binary_data(${COMPONENT_TARGET} "webserver/settings.html" TEXT)
#target_add_binary_data(${COMPONENT_TARGET} "webserver/stylesheet.css" TEXT)
#target_add_binary_data(${COMPONENT_TARGET} "webserver/script.js" TEXT)
#target_add_binary_data(${COMPONENT_TARGET} "webserver/save.html" TEXT)
#target_add_binary_data(${COMPONENT_TARGET} "webserver/ota.html" TEXT)

target_compile_options(${COMPONENT_TARGET} PUBLIC
# DEBUG/RELEASE CONFIGURATION
    -DRELEASE_BUILD
    #-DUSE_DBG
    -DBATTERY_CONTROL_ENABLED=0
# COMPONENTS BUILD FLAGS
    -DLV_LVGL_H_INCLUDE_SIMPLE
    -DARDUINOJSON_USE_LONG_LONG
    -DMAX_JSONDOC_SIZE=1024UL
# HW setup
    -DCASE_BTN_GPIO=GPIO_NUM_17
    -DSELF_POWER_GPIO=GPIO_NUM_16
# COMMON HW_SETUP
    -DLED_BL_GPIO=GPIO_NUM_27
    -DMAX_PAIRED_DEVICES=8UL
    -DMAX_HANDSET_IN_PAYLOAD=5UL
# PERIODS SETTINGS
    -DLV_TICK_PERIOD_MS=20UL
    -DLVGL_TASK_PERIOD=20UL
    -DSWITCH_OFF_PRESS_TIME_MS=3000UL
    -DBATTERY_CHECK_TASK_PERIOD=30000UL
    -DSHUTDOWN_PERIOD_MS=1800000UL
    -DSECRET_BTN_TRIGGER_PERIOD_MS=10000UL
    -DBLE_DISCONNECTION_ACK_TIMEOUT=20000UL
    -DBLE_CONNECTION_ACK_TIMEOUT=20000UL
    -DBLE_HANDSET_GET_INFO_TIMEOUT=20000UL
# BATTERY SETTINGS
    -DMIN_BATTERY_PERCENT_LAUNCH=5UL
    -DWARNING_BATTERY_PERCENT=10
    -DBATTERY_YELLOW_LEVEL=40UL
    -DBATTERY_ORANGE_LEVEL=25UL
    -DBATTERY_RED_LEVEL=WARNING_BATTERY_PERCENT
# SETTINGS
    -DFW_VERSION="0.1.1"
    -DHW_VERSION="1.0"
# OTHER
    -DANC_TRANSP_NEW_VERSION
)
